src/main/java/com/example/modeljson/error/AttributeTypeNotFoundException.java
package com.example.modeljson.error;

public class AttributeTypeNotFoundException extends RuntimeException {

    public AttributeTypeNotFoundException(String message) {
        super(message);
    }
}
